Table movie_theater {
  id UUID [primary key]
  name VARCHAR(64)
  description text
  images TEXT[]
  capacity SMALLINT
  disabled_access BOOLEAN
  maintenance BOOLEAN
}

TABLE movie {
  id UUID [primary key]
  title VARCHAR(64)
  director VARCHAR(64)
  release_date date
  duration INTERVAL
}

Table movie_screening {
  id UUID [primary key]
  start_screening TIMESTAMPTZ
  end_screening TIMESTAMPTZ
  available_seats SMALLINT
  movie_id UUID
  movie_theater_id UUID
}

TABLE users {
  id UUID [primary key]
  email TEXT
  password VARCHAR(64)
  roles TEXT[]
}


Ref: movie_screening.movie_id > movie.id
Ref: movie_screening.movie_theater_id > movie_theater.id